# senac_ia_uc17_projeto_integrador

./: .gitattributes  .gitignore  Makefile  README.md  STORY_3_1_README.md  pyproject.toml  requirements.txt  run_all.py
.streamlit/: config.toml
config/: config.yaml
dados/: run_manifest.json  teste_olhardigital.csv
dados/insight/: briefings.parquet
dados/processed/: corpus_clean.parquet  doc_topics.parquet  embeddings.npy  embeddings_index.parquet  run_manifest.json  topic_info.parquet  topic_manifest.json  topic_terms.parquet
dados/raw/: corpus.parquet  urls.parquet
dados/scores/: alerts.json  scores.parquet  series.parquet
dados/temporal/: relatorio_temporal.json  relatorio_tendencias.json  resumo_temporal.parquet  serie_temporal.parquet  topicos_emergentes.parquet
dados/topics/: doc_topics.parquet  doc_topics_validacao.json  topic_info.parquet  topic_manifest.json  topic_terms.parquet
docs/: architecture.md  brief.md  briefing.md  estudo-de-caso-etica-lgpd.md  handoff-fase5-continuidade-vm.md  handoff-sessao-20260709.md  prd.md  relatorio-projeto.md
docs/architecture/: adr-001-trend-score.md  adr-002-camada-llm.md  project-analysis.md  recommended-approach.md
docs/design/: trend-score.md
docs/guides/: guia-do-desenvolvedor.md
docs/img/: estudo-caso-series.html
docs/qa/: backtest-artemis-t0.md  coerencia-topicos.md  revisao-fase2-pln-modelagem.md  validacao_backtest.md
docs/runlogs/: fase5-vm-RUN-LOG.md
docs/stories/: 5.4.rag-retriever.md  (+25 more)
scripts/: benchmark_llm.py  gerar_amostra.py
src/: __init__.py
tests/: smoke_test.py  test_benchmark_llm.py  test_clean.py  test_dashboard_insight.py  test_dashboard_timeseries.py  test_doc_topics.py  test_embeddings_align.py  test_extract.py  test_forecast.py  test_graph.py  test_insight.py  test_llm.py  test_responder.py  test_retriever.py  test_series.py  test_sitemap.py  test_trend_score.py
(+51 files in other folders)
